[gd_scene load_steps=3 format=2]

[ext_resource path="res://Sprites/Building/rooftop.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Pile_Generator.gd" type="Script" id=2]

[node name="Rooftop" type="Node2D"]

[node name="Backdrop" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 1 )

[node name="Player_1_Pile" type="Node2D" parent="."]
position = Vector2( 751, 1050 )

[node name="Player_2_Pile" type="Node2D" parent="."]
position = Vector2( 1184, 1050 )

[node name="Pile_Generator" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="Victory_Message" type="Sprite" parent="."]
position = Vector2( 960, 150 )
